<resources>
    <string name="app_name">VanRoomies</string>

    <!-- Navigation and Fragments -->
    <string name="menu_listings">Listings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_matches">Matches</string>
    <string name="menu_chat">Chat</string>

    <!-- Matching Fragment -->
    <string name="matches_name_string">First Last</string>
    <string name="matches_age_string">23</string>
    <string name="matches_bio_string">Bio</string>
    <string name="matches_instruction_string">Swipe right to match, and left to reject</string>
    <string name="no_matches_found">Sorry, no matches found!</string>
    <string name="reshow_matches">Fetching you more matches!</string>

    <!-- Chat Channel Activity -->
    <string name="chat_send_button_text">Send</string>
    <string name="edit_chat_message_text">Enter Message</string>
    <string name="default_name">First Last</string>
    <string name="invalid_input_message">Please enter a non-empty message!</string>
    <string name="no_chats_found">Sorry, no chats found!</string>

    <!-- Chat Item -->
    <string name="chat_date">June 10</string>
    <string name="chat_text">This is a message</string>
    <string name="chat_timestamp">10:00</string>

    <!-- Chat Row -->
    <string name="chat_row_name_text">Their Name</string>
    <string name="chat_row_unmatch_text">Unmatch with User</string>
    <string name="chat_row_block_text">Block User</string>

    <!-- Profile Fragment -->
    <string name="profile_blurb">Profile Blurb</string>
    <string name="profile_blurb_text">Lorum Ipsum Tandem Bike Something Something Ride A Trike Einee Meeny Minee Moe Catch A Tiger By Its Toe Something Something About A Doe Expecto Patronum</string>
    <string name="profile_blurb_desc">Profile Name</string>
    <string name="sign_out">Sign Out</string>

    <!-- Listings Fragment -->
    <string name="listings_image_desc">The image for a given listing</string>
    <string name="listings_image">placeholder</string>
    <string name="listings_title">placeholder</string>
    <string name="listings_toggle">TOGGLE</string>
    <string name="listings_header_recommended">Recommended Listings</string>
    <string name="listings_header_owned">Owned Listings</string>

    <!-- View Listings Activity -->
    <string name="listings_desc">Listing Desc</string>
    <string name="listings_desc_text">This is the listing description.</string>
    <string name="listingDate">Listed Date</string>
    <string name="move_in_date">Move-in Date</string>
    <string name="listing_id">ID</string>
    <string name="pet_friendly">Pet Friendly</string>
    <string name="posted">Posted:</string>
    <string name="move">Move-In:</string>
    <string name="pets">Pets:</string>
    <string name="allowed">Allowed</string>
    <string name="not_allowed">Not Allowed</string>
    <string name="datetime_regex">T</string>
    <string name="add_listing_button_text">+</string>
    <string name="report_scam_text">Report Listing</string>
    <string name="delete_listing_text">Delete Listing</string>
    <string name="view_map">View Map</string>
    <string name="title_activity_maps">Maps</string>
    <string name="lat_long">Lat and Long</string>
    <string name="price">$1000/month</string>

    <!-- Content Descriptions -->
    <string name="home_screen_logo">App Logo</string>
    <string name="profile_name">Test Person</string>
    <string name="profile_name_desc">Profile Name</string>
    <string name="profile_image_desc">Profile Picture</string>
    <string name="profile_email">User Email</string>
    <string name="profile_birthday">2001–11–13</string>
    <string name="preferences_title">User Preferences</string>
    <string name="listing_name">Test Listing</string>
    <string name="listing_name_desc">Listing Title</string>
    <string name="listing_image_desc">Listing Picture</string>
    <string name="min_price">Min Price: </string>
    <string name="max_price">Max Price: </string>
    <string name="housing_type">Housing Type: </string>
    <string name="roommate_count">Roommates: </string>
    <string name="smoking">Smoking: </string>
    <string name="partying">Partying: </string>
    <string name="drinking">Drinking: </string>
    <string name="noise">Noise: </string>
    <string name="gender">Gender: </string>
    <string name="lease_length">Lease Length: </string>
    <string name="add_preferences_button">Add</string>
    <string name="edit_preferences_button">Edit</string>

    <!-- Placeholder strings -->
    <string name="placeholder_listings">Listings Fragment</string>
    <string name="placeholder_profile">Profile Fragment</string>
    <string name="placeholder_matches">Matches Fragment</string>
    <string name="placeholder_chat">Chat Fragment</string>
    <string name="placeholder">FREE HOUSE</string>
</resources>